update jdk
Signed-off-by: stephen <stephen5217@163.com>