@@ -1334,7 +1334,7 @@ public class MvUtils {
 
             List<ScalarOperator> prunedPredicates = getScanOpPrunedPartitionPredicates(scanOperator);
             if (prunedPredicates == null || prunedPredicates.isEmpty()) {
-                return List.of(ConstantOperator.TRUE);
+                return ImmutableList.of(ConstantOperator.TRUE);
             } else {
                 return prunedPredicates;
             }
